--- a/src/style.scss
+++ b/src/style.scss
@@ -43,6 +43,9 @@ body {
   background-color: #000;
   color: white;
   font-family: 'Gilroy', sans-serif !important;
+
+  position: relative; /* Добавляем позиционирование для overlay */
+
 }
 
 .grid {
@@ -58,7 +61,7 @@ body {
 }
 
 .grid-item {
-  border-radius: 1rem;
+  border-radius: 1.5rem;
   padding: 30px 25px;
   border: 1px solid rgba(91, 91, 91, 0.3);
   background: linear-gradient(180deg, #141414 0%, #0f0f0f 100%);
@@ -179,7 +182,12 @@ body {
     opacity: 0.3 !important;
   }
 }
-
+.grid_links {
+  display: flex;
+  flex-direction: column;
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
 .grid-link {
   display: block;
   display: inline-flex;
@@ -264,6 +272,14 @@ body {
       flex-wrap: wrap;
       border-radius: 20px;
       background: rgba(255, 255, 255, 0.10);
+      transition: 0.2s linear;
+      button#openBtn {
+        background: rgba(255, 255, 255, 0.2);
+        border: 0;
+        color: #FFF;
+        padding: 7px 14px;
+        border-radius: 30px;
+      }
       img {
         padding: 5px;
         background: rgba(255, 255, 255, 0.20);
@@ -316,6 +332,11 @@ body {
     }
   }
 }
+.room_devices {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
 
 .grid-3 {
@@ -340,6 +361,7 @@ body {
     background-position: center;
     background-size: contain;
     -webkit-transition: all 0.3s ease-in-out;
+    margin-bottom: 1rem;
     &:hover {
       background-size: 110%;
       transition: all 0.3s ease-in-out;
@@ -361,8 +383,9 @@ body {
   }
 }
 
+/*
 input[type="range"] {
-  -webkit-appearance: none !important; /*Needed to reset default slider styles */
+  -webkit-appearance: none !important;
   width: 100%;
   //height: 5px;
   height: 10px;
@@ -430,6 +453,7 @@ input[type="range"]::-webkit-slider-thumb {
     box-shadow: 0px 0px 1px darken(#fff, 15%)
   }
 }
+*/
 
 
 .header {
@@ -644,10 +668,374 @@ input[type="range"]::-webkit-slider-thumb {
 
 .toggle.active{
   transition: all .5s;
-  background-color: #29b5a8;
+  background-color: #6BC9F0;
 }
 
 .toggle.active::before{
   transition: all .5s;
   left: 40%;
+}
+
+.desktop {
+  display: block;
+}
+.mobile {
+  display: none;
+}
+
+@media screen and (min-width:320px) and (max-width:480px) {
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+  .grid {
+    flex-wrap: wrap !important;
+    width: auto;
+    height: auto;
+    padding: 10px;
+    column-gap: 10px;
+    row-gap: 10px;
+    .grid_header {
+      font-size: 24px;
+    }
+    .grid-item {
+      padding: 15px;
+    }
+    .grid-1 {
+      max-width: 480px;
+      column-gap: 10px;
+      row-gap: 10px;
+      .grid-item.item-1 {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .temp_value {
+          font-size: 32px;
+        }
+        .temp_info {
+          font-size: 14px;
+        }
+        .temp_props {
+          width: 100%;
+          font-size: 14px;
+        }
+      }
+      .grid_links {
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 10px;
+        .grid-link {
+          gap: 10px;
+          width: 100%;
+          span {
+            font-size: 14px;
+          }
+          img {
+            width: 24px;
+          }
+        }
+      }
+    }
+    .grid-item.item-4 {
+      min-width: auto;
+      .room_line {
+        .temp_props {
+          flex-direction: row;
+          width: 100%;
+          .temp_prop {
+            flex-direction: column-reverse;
+            gap: 5px;
+          }
+        }
+        .room_prop {
+          width: 100%;
+          .room_devices {
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .room_device {
+              width: 39%;
+            }
+            .room_device.conditioner {
+              flex-direction: column;
+              align-items: start;
+            }
+          }
+        }
+      }
+    }
+    .grid-3 {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      height: 100%;
+      .grid_cam {
+        width: 100%;
+        flex-shrink: 1;
+        height: 100px;
+        border-radius: 20px;
+      }
+    }
+  }
+  .time {
+    display: none;
+  }
+ }
+
+/* --------------------------------
+
+ xpopup 
+
+-------------------------------- */
+
+$color_1: #FFF;
+$background-color_1: rgb(21 21 21 / 80%);
+$background-color_2: #fc8982;
+$background-color_3: #c5ccd8;
+$background-color_4: #8f9cb5;
+
+.img-replace {
+  /* replace text with an image */
+  display: inline-block;
+  overflow: hidden;
+  text-indent: 100%;
+  color: transparent;
+  white-space: nowrap;
+}
+.cd-popup {
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: $background-color_1;
+	opacity: 0;
+	visibility: hidden;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+	transition: opacity 0.3s 0s, visibility 0s 0.3s;
+}
+.cd-popup.is-visible {
+	opacity: 1;
+	visibility: visible;
+	-webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+	-moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+	transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+.cd-popup-container {
+	position: relative;
+	width: 90%;
+	max-width: 400px;
+	margin: 4em auto;
+	background: #414141;
+	border-radius: .25em .25em .4em .4em;
+	text-align: center;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+	-webkit-transform: translateY(-40px);
+	-moz-transform: translateY(-40px);
+	-ms-transform: translateY(-40px);
+	-o-transform: translateY(-40px);
+	transform: translateY(-40px);
+	-webkit-backface-visibility: hidden;
+	-webkit-transition-property: -webkit-transform;
+	-moz-transition-property: -moz-transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.3s;
+	-moz-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+  ol, ul {
+    list-style: none;
+    padding: 0;
+  }
+	p {
+		padding: 3em 1em;
+	}
+	.cd-buttons {
+		&:after {
+			content: "";
+			display: table;
+			clear: both;
+		}
+		li {
+			float: left;
+			width: 100%;
+			list-style: none;
+			/*&:first-child {
+				a {
+					background: #fc7169;
+					border-radius: 0 0 0 .25em;
+				}
+			}
+			&:last-child {
+				a {
+					background: #b6bece;
+					border-radius: 0 0 .25em 0;
+				}
+			}*/
+      a {
+        background: #FD7655;
+      }
+		}
+		a {
+			display: block;
+			height: 60px;
+			line-height: 60px;
+			color: $color_1;
+			-webkit-transition: background-color 0.2s;
+			-moz-transition: background-color 0.2s;
+			transition: background-color 0.2s;
+      text-decoration: none;
+		}
+	}
+	.cd-popup-close {
+		position: absolute;
+		top: 8px;
+		right: 8px;
+		width: 30px;
+		height: 30px;
+		&::before {
+			content: '';
+			position: absolute;
+			top: 12px;
+			width: 14px;
+			height: 3px;
+			background-color: $background-color_4;
+			-webkit-transform: rotate(45deg);
+			-moz-transform: rotate(45deg);
+			-ms-transform: rotate(45deg);
+			-o-transform: rotate(45deg);
+			transform: rotate(45deg);
+			left: 8px;
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			top: 12px;
+			width: 14px;
+			height: 3px;
+			background-color: $background-color_4;
+			-webkit-transform: rotate(-45deg);
+			-moz-transform: rotate(-45deg);
+			-ms-transform: rotate(-45deg);
+			-o-transform: rotate(-45deg);
+			transform: rotate(-45deg);
+			right: 8px;
+		}
+	}
+}
+.no-touch {
+	.cd-popup-container {
+		.cd-buttons {
+			li {
+				&:first-child {
+					a {
+						&:hover {
+							background-color: $background-color_2;
+						}
+					}
+				}
+				&:last-child {
+					a {
+						&:hover {
+							background-color: $background-color_3;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+.is-visible {
+	.cd-popup-container {
+		-webkit-transform: translateY(0);
+		-moz-transform: translateY(0);
+		-ms-transform: translateY(0);
+		-o-transform: translateY(0);
+		transform: translateY(0);
+	}
+}
+@media only screen and (min-width: 1170px) {
+	.cd-popup-container {
+		margin: 8em auto;
+	}
+}
+
+.rs-bg-color {
+  background-color: #414141 !important;
+}
+.rs-path-color {
+  background-color: #584743 !important;
+}
+.rs-range-color {
+  background-color: #FD7655 !important;
+}
+.rs-border {
+  border: 1px solid #414141 !important;
+}
+.cd-popup-container p {
+  padding-top: 50px;
+  padding-bottom: 30px;
+}
+.rs-control {
+  margin-bottom: 30px;
+  margin-inline: auto;
+}
+.rs-handle {
+  background-color: #ffffff !important;
+}
+.rs-tooltip-text {
+  font-family: 'Gilroy' !important;
+  font-size: 20px !important;
+}
+
+.grid-1 {
+  .item-2 {
+    .temp_props {
+      padding: 20px;
+      font-size: 20px;
+      img {
+        width: 40px;
+      }
+    }
+  }
+  .grid-toggle {
+    span {
+      font-size: 16px;
+    }
+    .toggle {
+      margin-top: 15px;
+    }
+  }
+}
+.com_port {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 30px;
+  input, 
+  button {
+    border-radius: 5px;
+    border: 0;
+    padding: 5px 10px;
+  }
+  input {
+    background: #2C2C2C;
+    color: #FFF;
+  }
+  button {
+    background: #8C8C8C;
+    color: #1A1A1A;
+    transition: .2s linear;
+    cursor: pointer;
+    &:hover {
+      background: #8C8C8C;
+      color: #FFF;
+    }
+  }
+}
+
+.column {
+  flex-direction: column !important;
 }
